--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   </div>
 </header>
 <div><span></span></div>
-
+<div></div>
+<meta name="viewpoint" content="width=device-width, initial-scale=1">
 <section id="What">
   <div class="col-md-12 text-center">
     <h2> </h2>
@@ -55,7 +56,7 @@
   </div>
 </section>
 <section>
-  <div class="container">
+  <div class="container"
     <div class="row mt-5">
       <div class="col ml-4-center">
           <img class="pics" src="1.jfif"></img>
