--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+<span></span>
+    <meta charset="utf-8" name="viewpoint" content="width=device-width, initial-scale=1">
     <title>Bootstrap Project</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -47,8 +48,6 @@
   </div>
 </header>
 <div><span></span></div>
-<div></div>
-<meta name="viewpoint" content="width=device-width, initial-scale=1">
 <section id="What">
   <div class="col-md-12 text-center">
     <h2> </h2>
@@ -56,7 +55,7 @@
   </div>
 </section>
 <section>
-  <div class="container"
+  <div class="container"> 
     <div class="row mt-5">
       <div class="col ml-4-center">
           <img class="pics" src="1.jfif"></img>
