--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
 <span></span>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, maximum-scale=1">
   
     <title>Bootstrap Project</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
