--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/38a2f9103f.js" crossorigin="anonymous"></script>
   </head>
   <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <a class ="navbar-brand" href="#">Nico's Auto Repair</a>
   <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     <span class="navbar-toggler-icon"></span>
